src/nuklear_win32.zig

pub const __builtin_bswap16 = @import("std").zig.c_builtins.__builtin_bswap16;
pub const __builtin_bswap32 = @import("std").zig.c_builtins.__builtin_bswap32;
pub const __builtin_bswap64 = @import("std").zig.c_builtins.__builtin_bswap64;
pub const __builtin_signbit = @import("std").zig.c_builtins.__builtin_signbit;
pub const __builtin_signbitf = @import("std").zig.c_builtins.__builtin_signbitf;
pub const __builtin_popcount = @import("std").zig.c_builtins.__builtin_popcount;
pub const __builtin_ctz = @import("std").zig.c_builtins.__builtin_ctz;
pub const __builtin_clz = @import("std").zig.c_builtins.__builtin_clz;
pub const __builtin_sqrt = @import("std").zig.c_builtins.__builtin_sqrt;
pub const __builtin_sqrtf = @import("std").zig.c_builtins.__builtin_sqrtf;
pub const __builtin_sin = @import("std").zig.c_builtins.__builtin_sin;
pub const __builtin_sinf = @import("std").zig.c_builtins.__builtin_sinf;
pub const __builtin_cos = @import("std").zig.c_builtins.__builtin_cos;
pub const __builtin_cosf = @import("std").zig.c_builtins.__builtin_cosf;
pub const __builtin_exp = @import("std").zig.c_builtins.__builtin_exp;
pub const __builtin_expf = @import("std").zig.c_builtins.__builtin_expf;
pub const __builtin_exp2 = @import("std").zig.c_builtins.__builtin_exp2;
pub const __builtin_exp2f = @import("std").zig.c_builtins.__builtin_exp2f;
pub const __builtin_log = @import("std").zig.c_builtins.__builtin_log;
pub const __builtin_logf = @import("std").zig.c_builtins.__builtin_logf;
pub const __builtin_log2 = @import("std").zig.c_builtins.__builtin_log2;
pub const __builtin_log2f = @import("std").zig.c_builtins.__builtin_log2f;
pub const __builtin_log10 = @import("std").zig.c_builtins.__builtin_log10;
pub const __builtin_log10f = @import("std").zig.c_builtins.__builtin_log10f;
pub const __builtin_abs = @import("std").zig.c_builtins.__builtin_abs;
pub const __builtin_fabs = @import("std").zig.c_builtins.__builtin_fabs;
pub const __builtin_fabsf = @import("std").zig.c_builtins.__builtin_fabsf;
pub const __builtin_floor = @import("std").zig.c_builtins.__builtin_floor;
pub const __builtin_floorf = @import("std").zig.c_builtins.__builtin_floorf;
pub const __builtin_ceil = @import("std").zig.c_builtins.__builtin_ceil;
pub const __builtin_ceilf = @import("std").zig.c_builtins.__builtin_ceilf;
pub const __builtin_trunc = @import("std").zig.c_builtins.__builtin_trunc;
pub const __builtin_truncf = @import("std").zig.c_builtins.__builtin_truncf;
pub const __builtin_round = @import("std").zig.c_builtins.__builtin_round;
pub const __builtin_roundf = @import("std").zig.c_builtins.__builtin_roundf;
pub const __builtin_strlen = @import("std").zig.c_builtins.__builtin_strlen;
pub const __builtin_strcmp = @import("std").zig.c_builtins.__builtin_strcmp;
pub const __builtin_object_size = @import("std").zig.c_builtins.__builtin_object_size;
pub const __builtin___memset_chk = @import("std").zig.c_builtins.__builtin___memset_chk;
pub const __builtin_memset = @import("std").zig.c_builtins.__builtin_memset;
pub const __builtin___memcpy_chk = @import("std").zig.c_builtins.__builtin___memcpy_chk;
pub const __builtin_memcpy = @import("std").zig.c_builtins.__builtin_memcpy;
pub const __builtin_expect = @import("std").zig.c_builtins.__builtin_expect;
pub const __builtin_nanf = @import("std").zig.c_builtins.__builtin_nanf;
pub const __builtin_huge_valf = @import("std").zig.c_builtins.__builtin_huge_valf;
pub const __builtin_inff = @import("std").zig.c_builtins.__builtin_inff;
pub const __builtin_isnan = @import("std").zig.c_builtins.__builtin_isnan;
pub const __builtin_isinf = @import("std").zig.c_builtins.__builtin_isinf;
pub const __builtin_isinf_sign = @import("std").zig.c_builtins.__builtin_isinf_sign;
pub const __has_builtin = @import("std").zig.c_builtins.__has_builtin;
pub const __builtin_assume = @import("std").zig.c_builtins.__builtin_assume;
pub const __builtin_unreachable = @import("std").zig.c_builtins.__builtin_unreachable;
pub const __builtin_constant_p = @import("std").zig.c_builtins.__builtin_constant_p;
pub const __builtin_mul_overflow = @import("std").zig.c_builtins.__builtin_mul_overflow;
pub const int_least64_t = i64;
pub const uint_least64_t = u64;
pub const int_fast64_t = i64;
pub const uint_fast64_t = u64;
pub const int_least32_t = i32;
pub const uint_least32_t = u32;
pub const int_fast32_t = i32;
pub const uint_fast32_t = u32;
pub const int_least16_t = i16;
pub const uint_least16_t = u16;
pub const int_fast16_t = i16;
pub const uint_fast16_t = u16;
pub const int_least8_t = i8;
pub const uint_least8_t = u8;
pub const int_fast8_t = i8;
pub const uint_fast8_t = u8;
pub const intmax_t = c_longlong;
pub const uintmax_t = c_ulonglong;
pub const nk_char = i8;
pub const nk_uchar = u8;
pub const nk_byte = u8;
pub const nk_short = i16;
pub const nk_ushort = u16;
pub const nk_int = i32;
pub const nk_uint = u32;
pub const nk_size = usize;
pub const nk_ptr = usize;
pub const nk_bool = c_int;
pub const nk_hash = nk_uint;
pub const nk_flags = nk_uint;
pub const nk_rune = nk_uint;
pub const _dummy_array428 = [1]u8;
pub const _dummy_array429 = [1]u8;
pub const _dummy_array430 = [1]u8;
pub const _dummy_array431 = [1]u8;
pub const _dummy_array432 = [1]u8;
pub const _dummy_array433 = [1]u8;
pub const _dummy_array434 = [1]u8;
pub const _dummy_array435 = [1]u8;
pub const _dummy_array436 = [1]u8;
pub const _dummy_array440 = [1]u8;
pub const struct_nk_buffer_marker = extern struct {
    active: nk_bool,
    offset: nk_size,
};
pub const nk_plugin_alloc = ?fn (nk_handle, ?*anyopaque, nk_size) callconv(.C) ?*anyopaque;
pub const nk_plugin_free = ?fn (nk_handle, ?*anyopaque) callconv(.C) void;
pub const struct_nk_allocator = extern struct {
    userdata: nk_handle,
    alloc: nk_plugin_alloc,
    free: nk_plugin_free,
};
pub const NK_BUFFER_FIXED: c_int = 0;
pub const NK_BUFFER_DYNAMIC: c_int = 1;
pub const enum_nk_allocation_type = c_uint;
pub const struct_nk_memory = extern struct {
    ptr: ?*anyopaque,
    size: nk_size,
};
pub const struct_nk_buffer = extern struct {
    marker: [2]struct_nk_buffer_marker,
    pool: struct_nk_allocator,
    type: enum_nk_allocation_type,
    memory: struct_nk_memory,
    grow_factor: f32,
    allocated: nk_size,
    needed: nk_size,
    calls: nk_size,
    size: nk_size,
};
pub const struct_nk_rect = extern struct {
    x: f32,
    y: f32,
    w: f32,
    h: f32,
};
pub const struct_nk_command_buffer = extern struct {
    base: [*c]struct_nk_buffer,
    clip: struct_nk_rect,
    use_clipping: c_int,
    userdata: nk_handle,
    begin: nk_size,
    end: nk_size,
    last: nk_size,
};
pub const struct_nk_draw_command = extern struct {
    elem_count: c_uint,
    clip_rect: struct_nk_rect,
    texture: nk_handle,
};
pub const NK_ANTI_ALIASING_OFF: c_int = 0;
pub const NK_ANTI_ALIASING_ON: c_int = 1;
pub const enum_nk_anti_aliasing = c_uint;
pub const struct_nk_vec2 = extern struct {
    x: f32,
    y: f32,
};
pub const struct_nk_draw_null_texture = extern struct {
    texture: nk_handle,
    uv: struct_nk_vec2,
};
pub const NK_VERTEX_POSITION: c_int = 0;
pub const NK_VERTEX_COLOR: c_int = 1;
pub const NK_VERTEX_TEXCOORD: c_int = 2;
pub const NK_VERTEX_ATTRIBUTE_COUNT: c_int = 3;
pub const enum_nk_draw_vertex_layout_attribute = c_uint;
pub const NK_FORMAT_SCHAR: c_int = 0;
pub const NK_FORMAT_SSHORT: c_int = 1;
pub const NK_FORMAT_SINT: c_int = 2;
pub const NK_FORMAT_UCHAR: c_int = 3;
pub const NK_FORMAT_USHORT: c_int = 4;
pub const NK_FORMAT_UINT: c_int = 5;
pub const NK_FORMAT_FLOAT: c_int = 6;
pub const NK_FORMAT_DOUBLE: c_int = 7;
pub const NK_FORMAT_COLOR_BEGIN: c_int = 8;
pub const NK_FORMAT_R8G8B8: c_int = 8;
pub const NK_FORMAT_R16G15B16: c_int = 9;
pub const NK_FORMAT_R32G32B32: c_int = 10;
pub const NK_FORMAT_R8G8B8A8: c_int = 11;
pub const NK_FORMAT_B8G8R8A8: c_int = 12;
pub const NK_FORMAT_R16G15B16A16: c_int = 13;
pub const NK_FORMAT_R32G32B32A32: c_int = 14;
pub const NK_FORMAT_R32G32B32A32_FLOAT: c_int = 15;
pub const NK_FORMAT_R32G32B32A32_DOUBLE: c_int = 16;
pub const NK_FORMAT_RGB32: c_int = 17;
pub const NK_FORMAT_RGBA32: c_int = 18;
pub const NK_FORMAT_COLOR_END: c_int = 18;
pub const NK_FORMAT_COUNT: c_int = 19;
pub const enum_nk_draw_vertex_layout_format = c_uint;
pub const struct_nk_draw_vertex_layout_element = extern struct {
    attribute: enum_nk_draw_vertex_layout_attribute,
    format: enum_nk_draw_vertex_layout_format,
    offset: nk_size,
};
pub const struct_nk_convert_config = extern struct {
    global_alpha: f32,
    line_AA: enum_nk_anti_aliasing,
    shape_AA: enum_nk_anti_aliasing,
    circle_segment_count: c_uint,
    arc_segment_count: c_uint,
    curve_segment_count: c_uint,
    @"null": struct_nk_draw_null_texture,
    vertex_layout: [*c]const struct_nk_draw_vertex_layout_element,
    vertex_size: nk_size,
    vertex_alignment: nk_size,
};
pub const NK_STYLE_ITEM_COLOR: c_int = 0;
pub const NK_STYLE_ITEM_IMAGE: c_int = 1;
pub const NK_STYLE_ITEM_NINE_SLICE: c_int = 2;
pub const enum_nk_style_item_type = c_uint;
pub const struct_nk_color = extern struct {
    r: nk_byte,
    g: nk_byte,
    b: nk_byte,
    a: nk_byte,
};
pub const struct_nk_image = extern struct {
    handle: nk_handle,
    w: nk_ushort,
    h: nk_ushort,
    region: [4]nk_ushort,
};
pub const struct_nk_nine_slice = extern struct {
    img: struct_nk_image,
    l: nk_ushort,
    t: nk_ushort,
    r: nk_ushort,
    b: nk_ushort,
};
pub const union_nk_style_item_data = extern union {
    color: struct_nk_color,
    image: struct_nk_image,
    slice: struct_nk_nine_slice,
};
pub const struct_nk_style_item = extern struct {
    type: enum_nk_style_item_type,
    data: union_nk_style_item_data,
};
pub const nk_plugin_paste = ?fn (nk_handle, [*c]struct_nk_text_edit) callconv(.C) void;
pub const nk_plugin_copy = ?fn (nk_handle, [*c]const u8, c_int) callconv(.C) void;
pub const struct_nk_clipboard = extern struct {
    userdata: nk_handle,
    paste: nk_plugin_paste,
    copy: nk_plugin_copy,
};
pub const struct_nk_str = extern struct {
    buffer: struct_nk_buffer,
    len: c_int,
};
pub const nk_plugin_filter = ?fn ([*c]const struct_nk_text_edit, nk_rune) callconv(.C) nk_bool;
pub const struct_nk_text_undo_record = extern struct {
    where: c_int,
    insert_length: c_short,
    delete_length: c_short,
    char_storage: c_short,
};
pub const struct_nk_text_undo_state = extern struct {
    undo_rec: [99]struct_nk_text_undo_record,
    undo_char: [999]nk_rune,
    undo_point: c_short,
    redo_point: c_short,
    undo_char_point: c_short,
    redo_char_point: c_short,
};
pub const struct_nk_text_edit = extern struct {
    clip: struct_nk_clipboard,
    string: struct_nk_str,
    filter: nk_plugin_filter,
    scrollbar: struct_nk_vec2,
    cursor: c_int,
    select_start: c_int,
    select_end: c_int,
    mode: u8,
    cursor_at_end_of_line: u8,
    initialized: u8,
    has_preferred_x: u8,
    single_line: u8,
    active: u8,
    padding1: u8,
    preferred_x: f32,
    undo: struct_nk_text_undo_state,
};
pub const struct_nk_draw_list = extern struct {
    clip_rect: struct_nk_rect,
    circle_vtx: [12]struct_nk_vec2,
    config: struct_nk_convert_config,
    buffer: [*c]struct_nk_buffer,
    vertices: [*c]struct_nk_buffer,
    elements: [*c]struct_nk_buffer,
    element_count: c_uint,
    vertex_count: c_uint,
    cmd_count: c_uint,
    cmd_offset: nk_size,
    path_count: c_uint,
    path_offset: c_uint,
    line_AA: enum_nk_anti_aliasing,
    shape_AA: enum_nk_anti_aliasing,
};
pub const nk_text_width_f = ?fn (nk_handle, f32, [*c]const u8, c_int) callconv(.C) f32;
pub const struct_nk_user_font_glyph = extern struct {
    uv: [2]struct_nk_vec2,
    offset: struct_nk_vec2,
    width: f32,
    height: f32,
    xadvance: f32,
};
pub const nk_query_font_glyph_f = ?fn (nk_handle, f32, [*c]struct_nk_user_font_glyph, nk_rune, nk_rune) callconv(.C) void;
